# finufft

./: .gitignore
python/cufinufft/: pyproject.toml
python/cufinufft/cufinufft/: __init__.py  _plan.py  _simple.py
