[project]
name = "cufinufft"
description = "Non-uniform fast Fourier transforms on the GPU"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy"]
version = "2.3.0"
authors = [
    {name = "Yu-shuan Melody Shih"},
    {name = "Garrett Wright"},
    {name = "Joakim Anden"},
    {name = "Marco Barbone"},
    {name = "Robert Blackwell"},
    {name = "Johannes Blascke"},
    {name = "Alex Barnett"}]
maintainers = [{name = "Joakim Anden", email = "janden-vscholar@flatironinstitute.org"}]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU",
    "Topic :: Scientific/Engineering :: Mathematics"
    ]

[tool.setuptools.package-data]
cufinufft = ["libcufinufft.so"]
